Updated and added a pinned only feature

--- a/templates/tournament/index.html
+++ b/templates/tournament/index.html
@@ -190,11 +190,14 @@
 <div class="card mb-4">
     <div class="card-body">
         <div class="row g-3">
-            <!-- Search -->
-            <div class="col-md-4">
+            <!-- Search and Filter -->
+            <div class="col-md-6">
                 <div class="input-group">
                     <span class="input-group-text"><i class="fas fa-search"></i></span>
                     <input type="text" id="searchInput" class="form-control" placeholder="Search tournaments by name, location, or status...">
+                    <button id="filterPinned" class="btn btn-outline-warning" type="button" title="Show only pinned tournaments">
+                        <i class="fas fa-thumbtack"></i> Pinned Only
+                    </button>
                 </div>
             </div>
             
