--- a/templates/base.html
+++ b/templates/base.html
@@ -182,7 +182,7 @@
                         </a>
                         <ul class="dropdown-menu dropdown-menu-end">
                             {% if session.get('name') %}
-                                <li><a class="dropdown-item" href="#"><i class="fas fa-user-cog me-2"></i>Profile</a></li>
+                                <li><a class="dropdown-item" href="{{ url_for('auth.profile') }}"><i class="fas fa-user-circle me-2"></i>My Profile</a></li>
                                 <li><hr class="dropdown-divider"></li>
                             {% endif %}
                             <li>
