--- a/templates/auth/profile.html
+++ b/templates/auth/profile.html
@@ -40,13 +40,18 @@
                             <input type="email" class="form-control" id="email" name="email" value="{{ user.email or '' }}">
                         </div>
                         
-                        <div class="d-flex justify-content-between">
+                        <div class="d-flex justify-content-between align-items-center">
                             <a href="{{ url_for('tournament.index') }}" class="btn btn-secondary">
                                 <i class="fas fa-arrow-left me-1"></i> Back to Tournaments
                             </a>
-                            <button type="submit" class="btn btn-primary">
-                                <i class="fas fa-save me-1"></i> Save Changes
-                            </button>
+                            <div>
+                                <a href="{{ url_for('auth.change_password') }}" class="btn btn-outline-primary me-2">
+                                    <i class="fas fa-key me-1"></i> Change Password
+                                </a>
+                                <button type="submit" class="btn btn-primary">
+                                    <i class="fas fa-save me-1"></i> Save Changes
+                                </button>
+                            </div>
                         </div>
                     </form>
                 </div>
