--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -212,7 +212,9 @@
                                     Remember me
                                 </label>
                             </div>
-                            <a href="#" class="text-decoration-none">Forgot password?</a>
+                            <a href="{{ url_for('auth.forgot_password') }}" class="text-decoration-none">
+                                <i class="fas fa-question-circle me-1"></i>Forgot password?
+                            </a>
                         </div>
                         <button type="submit" class="btn btn-primary btn-lg w-100 py-3 mb-3">
                             <i class="fas fa-sign-in-alt me-2"></i>Sign In
