--- a/templates/auth/profile.html
+++ b/templates/auth/profile.html
@@ -45,6 +45,9 @@
                                 <i class="fas fa-arrow-left me-1"></i> Back to Tournaments
                             </a>
                             <div>
+                                <a href="{{ url_for('auth.user_stats') }}" class="btn btn-info text-white me-2">
+                                    <i class="fas fa-chart-line me-1"></i> View Stats
+                                </a>
                                 <a href="{{ url_for('auth.change_password') }}" class="btn btn-outline-primary me-2">
                                     <i class="fas fa-key me-1"></i> Change Password
                                 </a>
