Implemented creator field for public view

--- a/templates/tournament/public_view.html
+++ b/templates/tournament/public_view.html
@@ -457,6 +457,18 @@
                             <li class="mb-3 pb-2 border-bottom">
                                 <div class="d-flex align-items-start">
                                     <div class="icon-circle bg-primary bg-opacity-10 text-primary p-2 me-3 rounded-circle">
+                                        <i class="fas fa-user-edit"></i>
+                                    </div>
+                                    <div>
+                                        <span class="d-block fw-medium text-dark">Created By</span>
+                                        <span class="text-muted">{{ creator_username }}</span>
+                                    </div>
+                                </div>
+                            </li>
+                            
+                            <li class="mb-3 pb-2 border-bottom">
+                                <div class="d-flex align-items-start">
+                                    <div class="icon-circle bg-primary bg-opacity-10 text-primary p-2 me-3 rounded-circle">
                                         <i class="fas fa-map-marker-alt"></i>
                                     </div>
                                     <div>
