Fixed current_round indicator on view.html

--- a/templates/tournament/view.html
+++ b/templates/tournament/view.html
@@ -314,7 +314,7 @@
                                     <i class="fas fa-chess-board text-primary"></i>
                                 </div>
                                 <div>
-                                    <div class="h5 mb-0">{{ rounds|length }}/{{ tournament.rounds }}</div>
+                                    <div class="h5 mb-0">{{ current_round.round_number }}/{{ tournament.rounds }}</div>
                                     <small class="text-muted">Rounds Played</small>
                                 </div>
                             </div>
