--- a/templates/tournament/view.html
+++ b/templates/tournament/view.html
@@ -423,9 +423,15 @@
             </div>
             <div class="card-body">
                 {% if current_round %}
+                    {% if current_round.status == 'ongoing' or current_round.status == 'in_progress' or current_round.status == 'In Progress' or current_round.status == "pending" %}
+                    <h6 class="card-subtitle mb-3">
+                        Round {{ current_round.round_number }} - In Progress
+                    </h6>
+                    {% else %}
                     <h6 class="card-subtitle mb-3">
                         Round {{ current_round.round_number }} - {{ current_round.status|title }}
                     </h6>
+                    {% endif %}
                     {% if pairings %}
                         <div class="table-responsive">
                             <table class="table table-hover">
