--- a/templates/tournament/public_view.html
+++ b/templates/tournament/public_view.html
@@ -461,7 +461,11 @@
                                     </div>
                                     <div>
                                         <span class="d-block fw-medium text-dark">Created By</span>
-                                        <span class="text-muted">{{ creator_username }}</span>
+                                        <a href="{{ url_for('stats.user_stats', user_id=tournament.creator_id) }}" 
+                                           class="text-decoration-none"
+                                           title="View user's profile">
+                                            <i class="fas fa-user me-1"></i>{{ creator_username }}
+                                        </a>
                                     </div>
                                 </div>
                             </li>
